custom/templates/Monarch/css/monarch.css
/*

    TEMPLATE: MONARCH

*/

@import url('https://fonts.googleapis.com/css?family=Montserrat:400,600,800|Oxygen');

@font-face {
	font-family: 'PxGroteskRegular';
	src:
		url('/custom/templates/Monarch/webfonts/Px-Grotesk-Regular.ttf') format('truetype');
}
@font-face {
	font-family: 'BasierSquareRegular';
	src:
	url("Basier-Square-Regular.otf") format("opentype");
}

/* ======= Masthead ======= */

body {
	font-family: "BasierSquareRegular",
	sans-serif;
}
a {
    font-weight: 600;
    font-family: "BasierSquareRegular",
    sans-serif;
}
body.pushable > .pusher {
	background-position: center;
}

h1,
h2,
h3,
h4,
h5 {
font-family: "BasierSquareRegular",
sans-serif;
}

.ui.container.intro {margin-top:20px !important;}


/* =======[ NAVIGATION BAR]=======*/

.ui.header {
	font-family: 'PxGroteskRegular';
}

.ui.secondary.menu .toc.item {
	display: none;
}

.ui.secondary.menu .toc.item i {
	margin: 0;
}

.ui.secondary.menu .ui.medium.label {
	padding: .68em 1em .5em .5em;
}

.ui.secondary.menu .ui.medium.label img {
	font-size: 1.09rem;
	margin: -.6em .5em -.6em -.5em;
}

@media only screen and (max-width: 768px) {

	.ui.secondary.menu .menu,
	.ui.secondary.menu .item {
		display: none;
	}

	.ui.secondary.menu .toc.item {
		display: block;
	}
}

.ui.secondary.menu .ui.popup {
	min-width: 200px;
}

.ui.secondary.menu .ui.popup a:not([href]) {
	cursor: default !important;
	font-family: "BasierSquareRegular",sans-serif;
}
.ui.menu .ui.list>.item:last-child {
	font-family: "BasierSquareRegular",
	sans-serif;
}
.ui.secondary.menu {
	padding: 20px;
}
.ui.secondary.menu .item {
	color: #fff;
	font-family: "PxGroteskRegular",
	sans-serif;
	font-size: 16px;
	font-weight: 600;
	letter-spacing: -0.04em;
}
.ui.secondary.menu .item:hover {
	color: #fff !important;
}
.ui.secondary.menu .active.item {
    -webkit-box-shadow: none;
    box-shadow: none;
    background: #fff;
    color: #000;
		border-radius: .5px;
		font-size: 16px;
}
.ui.secondary.menu .active.item:hover {
    -webkit-box-shadow: none;
    box-shadow: none;
    background: #fff;
    color: #000 !important;
    border-radius: .5px;
}
.ui.inverted.link.list .item {
	color: #fff;
	font-family: 'PxGroteskRegular';
}
.ui.segment {
	border-radius: 0px;
}
.ui.fluid.card {
	border-radius: 0px;
	-webkit-box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
	box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
}
.ui.segments {margin-top: 30px;}
.ui.form {margin-top:10px;}

.ui.menu .ui.list .item {
	color: #777;
}

.ui.menu .ui.list .item:hover {
	color: #000 !important;
	font-family: "Montserrat",sans-serif;
}
.ui.breadcrumb {
	background: #fbfafa;
	-webkit-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
}
.ui.breadcrumb a {color: #999;}
.ui.card > .content > .header {
	font-weight: 600;
}

.ui.popup>.header {
	font-family: "PxGroteskRegular";
}
.ui.popup>.header:hover {
	font-family: "PxGroteskRegular";
}
.ui.popup>.header:focus {
	font-family: "PxGroteskRegular";
}
.ui.card img.avatar {
	border-radius: 5px;
}
.ui.avatar.image {
	border-radius: 5px;
	width: 3em;
	height: 3em;
}
.ui.primary.button {
	background: #000;
}

.masthead.pusher h1 {
	font-family: "Montserrat",sans-serif;
	font-weight: 600;
}
.masthead.pusher a:hover {
	text-decoration: none;
}
.ui.menu {
	border-radius: 0px;
}

/*
 *  [ TOASTR ]
 */

#toast-container {
	font-family: 'PxGroteskRegular';
	width: 100%;
}

#toast-container .toast-close-button {
	color: #000;
	opacity: .4;
}

#toast-container .toast-close-button:hover,
#toast-container .toast-close-button:focus {
	color: #000;
	opacity: .6;
}

#toast-container .toast {
	padding: 1rem 1.5rem;
	background: #fff;
	color: rgba(0, 0, 0, .68);
	-webkit-box-shadow: 0 1px 3px 0 #bababb, 0 0 1px 1px #bababb;
	box-shadow: 0 1px 3px 0 #bababb, 0 0 1px 1px #bababb;
	border: none;
	border-radius: .28571429rem;
	cursor: default;
	opacity: 1;
	transition: .5s all ease;
}

#toast-container .toast-success {
	border-bottom: solid 2px #30B245;
}

#toast-container .toast-success .toast-progress {
	background: #30B245;
}

#toast-container .toast-error {
	border-bottom: solid 2px #CE1D28;
}

#toast-container .toast-error .toast-progress {
	background: #CE1D28;
}

#toast-container .toast-warning {
	border-bottom: solid 2px #EE6A1C;
}

#toast-container .toast-warning .toast-progress {
	background: #EE6A1C;
}

#toast-container .toast-info {
	border-bottom: solid 2px #367DC4;
}

#toast-container .toast-info .toast-progress {
	background: #367DC4;
}

#toast-container .toast:hover {
	-webkit-box-shadow: 0 1px 3px 0 #bababb, 0 0 1px 1px #bababb;
	box-shadow: 0 1px 3px 0 #bababb, 0 0 1px 1px #bababb;
	cursor: default;
}

@media (max-width: 576px) {
	#toast-container .toast {
		width: calc(100% - 24px);
	}
}

#forum-node .nine a {
    color: #000;
    text-decoration: none;
    background-color: transparent;
    font-weight: 500;
    font-family: "BasierSquareRegular",
    sans-serif;
    font-size: 16px;
}
#forum-node .ui.grid .row {
	padding-left: 20px;
}
#normal-threads {
	-webkit-box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
	box-shadow: 0 10px 12px rgba(0, 0, 0, 0.1);
	border: 0px;
}
#normal-threads thead th {
	border: 0px;
}

.floated .primary.button {
	text-align: center;
	background: #000;
	border: 2px #000 solid;
	color: #fff;
	padding: 15px 20px;
	border-radius: 5px;
	margin: 0 auto 20px auto;
	box-shadow: 0px;
	display: inline-block;
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0.4);
}
.floated .primary.button:hover {
	text-align: center;
	background: #000;
	border: 2px #000 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
	-webkit-box-shadow: 0 5px 10px rgba(0, 0, 0, 0);
	box-shadow: 0 5px 10px rgba(0, 0, 0, 0);
}
.floated .primary.button:focus {
	text-align: center;
	background: #000 !important;
	border: 2px #000 solid;
	color: #fff;
	margin: 0 auto 20px auto;
	display: inline-block;
}
/* ... */

